# AgentOrchestrationFramework

./: .gitignore  AGENTS.md  Makefile  ORCHESTRATION.md  PROJECT_PROMPT.md  PROJECT_STATUS.md  README.md  assignment.md  infer  main_labels  main_train  pyproject.toml  rubric.md
.claude/: settings.json
.claude/agents/: clarifier.md  locator.md  researcher.md  reviewer.md
.claude/commands/: debug.md  grade.md  implement.md  iterate.md  plan.md  research.md  rpi.md  status.md  validate.md
controller/: CONTROLLER_PROMPT.md  __init__.py  orchestrator.md  orchestrator.py  rpi_loop.py  run.py  student_template.md  teacher_template.md  tracer.py  utils.py
example/: assignment.md
src/: cards.c  cards.h  csv.c  csv.h  hash.c  hash.h  infer.c  labels.c  labels.h  main_labels.c  main_train.c  train.c  train.h
