[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tracer-orchestrator"
version = "0.1.0"
description = "Tracer loop and model interaction framework for agent orchestration."
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [{name = "Tracer Orchestrator"}]
dependencies = []

[project.scripts]
tracer-orch = "controller.run:main"

[tool.setuptools]
packages = ["controller"]

[tool.setuptools.package-data]
controller = ["*.md"]
